Test revision correction