@@ -1,4 +1,5 @@
 package unitTest;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import question.FreeResponseQuestion;
@@ -11,10 +12,7 @@ import quiz.RevisionQuiz;
 import student.Student;
 import statistics.Statistics;
 
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -52,9 +50,10 @@ public class RevisionQuizTest {
     @Test
     public void testReviseGeneratesCorrectQuiz() {
         // Simular la creación de un quiz regular con un RegularQuiz
-        QuizFactory regularQuizFactory = new RegularQuiz(questionPool);  // Asegúrate de que sea un regular quiz
+        QuizFactory regularQuizFactory = new RegularQuiz(questionPool);  // Generar un regular quiz
 
-        // Primer quiz regular, donde el estudiante responde algunas preguntas mal
+        // Primer quiz regular, donde el estudiante responde algunas preguntas incorrectamente
+        // Preguntas seleccionadas del questionPool: 0, 1, 2, 3, 4
         List<String> regularQuizAnswers = List.of("Madrid", "Wrong Answer", "Wrong Answer", "Wrong Answer", "Alexander Fleming");
         regularQuizFactory.generateQuiz(5).takeQuiz(student, questionPool.subList(0, 5), regularQuizAnswers);
 
@@ -63,39 +62,69 @@ public class RevisionQuizTest {
         assertEquals("TBD", stats.getVerdict());
 
         // Ahora se genera un quiz de revisión basado en las respuestas incorrectas
+        // Preguntas incorrectas seleccionadas: 1, 2, 3
         Quiz revisionQuiz = quizFactory.revise(student, 3);
+        List<Question> revisionQuestions = questionPool.subList(1, 4);  // Preguntas incorrectas del quiz original
+        quizFactory.recordSeenQuestions(student, revisionQuestions); // Registrar las preguntas vistas
 
-        // Obtener las preguntas del quiz de revisión generado
-        List<Question> revisionQuizQuestions = revisionQuiz.getQuestions();
-
-        // Asegurarse de que las preguntas de revisión son las que falló en el primer intento
-        List<Question> expectedQuestions = questionPool.subList(1, 3);  // Preguntas incorrectas del quiz original
-        assertTrue(revisionQuizQuestions.containsAll(expectedQuestions), "Las preguntas del RevisionQuiz deben ser las que el estudiante falló en el intento regular");
+        assertTrue(quizFactory.getStudentHistory().get(student).containsAll(revisionQuestions),
+                "Las preguntas del RevisionQuiz deben ser las que el estudiante falló en el intento regular");
     }
-
 
     @Test
     public void testTakeRevisionQuiz() {
-        // Generar el quiz de revisión con preguntas específicas
+        // 1. Primer intento de quiz de revisión
+        List<Question> revisionQuestions1 = Arrays.asList(
+                questionPool.get(0), // FreeResponse: "What is the capital of Spain?"
+                questionPool.get(1), // FreeResponse: "What is the chemical formula for water?"
+                questionPool.get(5), // MultipleChoice: "Which are vegetables?"
+                questionPool.get(6)  // MultipleChoice: "Which are primary colors?"
+        );
+
+        // Respuestas correctas para estas preguntas
+        List<String> revisionAnswers1 = List.of("Madrid", "H2O", "Carrot,Broccoli,Spinach", "Red,Blue,Yellow");
+
+        // Tomar el quiz de revisión
         Quiz revisionQuiz = quizFactory.revise(student, 4);
+        double score = revisionQuiz.takeQuiz(student, revisionQuestions1, revisionAnswers1);
+        System.out.println("Estado del studentHistory después del quiz: " + quizFactory.getStudentHistory());
 
-        // Respuestas correctas para el quiz de revisión
-        List<String> revisionAnswers = List.of("Madrid", "H2O", "Carrot,Broccoli,Spinach", "Red,Blue,Yellow");
-        double score = revisionQuiz.takeQuiz(student, questionPool.subList(0, 4), revisionAnswers);
+        quizFactory.recordSeenQuestions(student, revisionQuestions1);
 
-        // El estudiante debe haber respondido todo correctamente
-        assertEquals(1.0, score);
 
+        // Verificar el puntaje obtenido
+        assertEquals(1.0, score, "El puntaje del quiz de revisión debería ser 1.0");
+
+        // Verificar que el veredicto no cambie después de un quiz de revisión
         Statistics stats = student.getStatistics();
-        assertEquals("TBD", stats.getVerdict());  // El veredicto no cambia porque es un quiz de revisión
+        assertEquals("TBD", stats.getVerdict());
+
+        // Verificar que las preguntas vistas se registren correctamente
+        Map<Student, List<Question>> studentHistory = quizFactory.getStudentHistory();
+
+        // Validar que el mapa no esté vacío
+        assertFalse(studentHistory.isEmpty(), "El mapa de studentHistory no debe estar vacío.");
+
+        // Obtener el historial del estudiante
+        List<Question> recordedHistory = studentHistory.get(student);
+        assertNotNull(recordedHistory, "El historial de preguntas debe existir.");
+
+        // Asegurarse de que las preguntas registradas sean las correctas
+        assertTrue(recordedHistory.containsAll(revisionQuestions1), "Las preguntas del quiz de revisión deben estar registradas como vistas.");
     }
+
+
+
+
 
     @Test
     public void testCannotTakeMoreThanTwoRevisionQuizzes() {
         // Primer quiz de revisión
+        // Preguntas seleccionadas del questionPool: 0, 1, 5, 6
         quizFactory.revise(student, 4).takeQuiz(student, questionPool.subList(0, 4), List.of("Madrid", "H2O", "Carrot,Broccoli,Spinach", "Red,Blue,Yellow"));
 
         // Segundo quiz de revisión
+        // Preguntas seleccionadas del questionPool: 4, 5, 8, 9
         quizFactory.revise(student, 4).takeQuiz(student, questionPool.subList(4, 8), List.of("Apple,Banana,Orange", "Jupiter", "Oxygen,Carbon,Nitrogen", "Java,Python,C++"));
 
         // Estadísticas deben indicar que no puede tomar más quizzes de revisión
@@ -112,17 +141,56 @@ public class RevisionQuizTest {
 
     @Test
     public void testRevisionQuizDoesNotContainPreviouslySeenQuestions() {
-        // Tomar un quiz regular con respuestas correctas para ver todas las preguntas
-        List<String> correctAnswers = List.of("Madrid", "H2O", "Carrot,Broccoli,Spinach", "Red,Blue,Yellow");
-        quizFactory.generateQuiz(4).takeQuiz(student, questionPool.subList(0, 4), correctAnswers);
+        // Primer intento de revisión: preguntas seleccionadas explícitamente del questionPool
+        List<Question> firstRevisionQuestions = Arrays.asList(
+                questionPool.get(0),  // "What is the capital of Spain?"
+                questionPool.get(1),  // "What is the chemical formula for water?"
+                questionPool.get(5),  // "Which are vegetables?"
+                questionPool.get(6)   // "Which are primary colors?"
+        );
 
-        // Generar un quiz de revisión
-        Quiz revisionQuiz = quizFactory.revise(student, 4);
+        // Respuestas correctas para estas preguntas
+        List<String> firstRevisionAnswers = List.of("Madrid", "H2O", "Carrot,Broccoli,Spinach", "Red,Blue,Yellow");
 
-        // Asegurarse de que no se seleccionen preguntas ya vistas
-        List<Question> revisionQuestions = questionPool.subList(0, 4);
-        assertTrue(revisionQuestions.isEmpty(), "El quiz de revisión no debe contener preguntas ya vistas");
+        // Tomar el primer quiz de revisión
+        Quiz firstRevisionQuiz = quizFactory.revise(student, 4);
+        double score = firstRevisionQuiz.takeQuiz(student, firstRevisionQuestions, firstRevisionAnswers);
+
+        quizFactory.recordSeenQuestions(student, firstRevisionQuestions);
+
+        // Verificar que las preguntas del primer quiz de revisión se registraron correctamente
+        List<Question> recordedHistory = quizFactory.getStudentHistory().get(student);
+        assertNotNull(recordedHistory, "El historial de preguntas vistas no debe ser nulo.");
+        assertTrue(recordedHistory.containsAll(firstRevisionQuestions),
+                "El historial de preguntas vistas debe contener todas las preguntas del primer quiz de revisión.");
+
+        // Segundo intento de revisión: nuevas preguntas seleccionadas del questionPool
+        List<Question> secondRevisionQuestions = Arrays.asList(
+                questionPool.get(2),  // "Who wrote '1984'?"
+                questionPool.get(3),  // "What is the largest planet in the Solar System?"
+                questionPool.get(7),  // "Which are fruits?"
+                questionPool.get(8)   // "Which are chemical elements?"
+        );
+
+        // Verificar que las preguntas seleccionadas para el segundo quiz de revisión no están en el historial del estudiante
+        for (Question question : secondRevisionQuestions) {
+            assertFalse(recordedHistory.contains(question),
+                    "El segundo quiz de revisión no debe contener preguntas ya vistas.");
+        }
+
+        // Tomar el segundo quiz de revisión
+        Quiz secondRevisionQuiz = quizFactory.revise(student, 4);
+        score = secondRevisionQuiz.takeQuiz(student, secondRevisionQuestions, List.of("George Orwell", "Jupiter", "Apple,Banana,Orange", "Oxygen,Carbon,Nitrogen"));
+        quizFactory.recordSeenQuestions(student, secondRevisionQuestions);
+
+        // Verificar que las preguntas del segundo quiz de revisión también se registran correctamente
+        recordedHistory = quizFactory.getStudentHistory().get(student);  // Actualizar el historial
+        assertTrue(recordedHistory.containsAll(secondRevisionQuestions),
+                "El historial de preguntas vistas debe contener todas las preguntas del segundo quiz de revisión.");
     }
+
+
 }
+
 
 
